--- a/MQuince/MQuince.Integration.Services.Implementation/MQuince.Integration.Services.Implementation.csproj
+++ b/MQuince/MQuince.Integration.Services.Implementation/MQuince.Integration.Services.Implementation.csproj
@@ -7,6 +7,8 @@
   <ItemGroup>
     <PackageReference Include="Grpc.Core.Api" Version="2.34.0" />
     <PackageReference Include="iTextSharp" Version="5.5.13.2" />
+    <PackageReference Include="MailKit" Version="2.10.1" />
+    <PackageReference Include="MimeKit" Version="2.10.1" />
     <PackageReference Include="PdfSharp" Version="1.50.5147" />
     <PackageReference Include="QRCoder" Version="1.4.1" />
     <PackageReference Include="SSH.NET" Version="2016.1.0" />
